# predict

./: .gitignore  .railwayignore  DOCUMENTATION.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  spec.md  tsconfig.base.json  vercel.json  vitest.config.ts
apps/server/: package.json
apps/server/scripts/: 00-fund-from-local.ts  01-faucet.ts  02-subscribe-activate.ts  03-fixtures.ts  04-validate-stat.ts  05a-scan-intents.ts  05b-probe-intent.ts  05c-crack-seeds.ts  06-roundtrip.ts  07-list-intents.ts  08-close-intents.ts  09-market-activity.ts  10-e2e-resolve.ts  11-live-deposits.ts  12-feed-check.ts  13-requeue-btts.ts  14-taker-claim.ts  15-lineup-shape.ts  16-h1-proof-shape.ts  17-tournament-coverage.ts  18-old-snapshot-retention.ts  19-seed-liquidity.ts  20-seed-watch.ts  21-decider-check.ts  22-ts-check.ts  23-onchain-probe.ts  24-requeue-et-voids.ts  25-check-onchain-state.ts  env.ts
apps/server/src/: config.ts  main.ts
apps/server/src/api/: routes.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/services/: aiMarkets.ts  autoMarket.ts  bus.ts  gemini.ts  indexer.ts  positions.ts  settler.ts  txline.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: FaucetButton.tsx  MarketCard.tsx  ReceiptView.tsx  RightRail.tsx  Sparkline.tsx
apps/web/src/lib/: api.ts  flags.ts  (+2 more)
program/: Anchor.toml  Cargo.toml  deploy.sh  fix-and-build.sh
program/programs/groundtruth_pool/: Cargo.toml
program/programs/groundtruth_pool/src/: lib.rs
(+7 files in other folders)
